Improved the documentation layout.

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -22,6 +22,14 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
+        <ul class="content-menu">
+          {% for post in site.posts reversed %}
+          <li>
+            <a href="{{ post.url }}">{{ post.title }}</a>
+          </li>
+          {% endfor %}
+        </ul>
+
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
